--- a/css/base.scss
+++ b/css/base.scss
@@ -6,20 +6,51 @@
 body {
 	padding: 40px 80px;
 	font-family: Helvetica, 'Helvetica Neue', arial, sans-serif;
-	text-align: center;
 }
 
-#links {
-	padding-top: 10px;
+h1,h2 {
+	font-family: 'Questrial', Helvetica, 'Helvetica Neue', arial, sans-serif;
+	font-weight: normal;
+}
+
+#title, #links {
 	display: flex;
 	justify-content: center;
 }
 
 #title {
-	font-weight: normal;
+	font-size: 3rem;
+	margin: 30px 0;
+}
+
+a {
+	color: black;
+	text-decoration: none;
+	line-height: 1.5rem;
+	border-bottom: 1px solid black;
+
+	&:hover {
+		color: royalblue;
+		border-bottom: 1px solid royalblue;
+	}
 }
 
 .link {
 	padding: 0 10px;
-	font-weight: bold;
+	margin: 5px 0;
+}
+
+h2 {
+	&:before {
+		content: '# ';
+	}
+}
+
+section {
+	padding: 10px 0;
+
+	p {
+		padding-left: 20px;
+		line-height: 1.5rem;
+	}
 }
