--- a/css/base.scss
+++ b/css/base.scss
@@ -3,8 +3,20 @@
 # only Main files contain this front matter, not partials.
 ---
 
+// https://github.com/twbs/bootstrap/blob/v4-dev/scss/_variables.scss#L171-L182
+$grid-breakpoints-xs: 0;
+$grid-breakpoints-sm: 576px;
+$grid-breakpoints-md: 768px;
+$grid-breakpoints-lg: 992px;
+$grid-breakpoints-xl: 1200px;
+
 body {
-	padding: 40px 80px;
+	padding: 40px 5rem;
+
+	@media (max-width: $grid-breakpoints-sm) {
+		padding: 40px 2rem;
+	}
+
 	font-family: Helvetica, 'Helvetica Neue', arial, sans-serif;
 }
 
