--- a/css/base.scss
+++ b/css/base.scss
@@ -66,3 +66,11 @@ section {
 		line-height: 1.5rem;
 	}
 }
+
+#experience {
+	em {
+		font-style: normal;
+		text-transform: uppercase;
+		font-size: 0.85em;
+	}
+}
