--- a/css/base.scss
+++ b/css/base.scss
@@ -39,6 +39,7 @@ a {
 	color: black;
 	text-decoration: none;
 	line-height: 1.5rem;
+	padding-bottom: 0.1rem;
 	border-bottom: 1px solid black;
 
 	&:hover {
@@ -65,6 +66,11 @@ section {
 		padding-left: 20px;
 		line-height: 1.5rem;
 	}
+}
+
+
+p strong {
+	line-height: 1.75rem;
 }
 
 #experience {
