--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -7,7 +7,8 @@
 
 		<link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Questrial" rel="stylesheet">
-		<link rel="stylesheet" href="css/base.css" />
+		<link rel="stylesheet" href="//writ.cmcenroe.me/1.0.4/writ.min.css">
+		<link rel="stylesheet" href="/css/main.css">
 
 		<title>{{ site.title }}</title>
 	</head>
