fix font and add favicon

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -5,8 +5,13 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<meta http-equiv="x-ua-compatible" content="ie=edge">
 
+		<meta name="description" content="Suyash's Website">
+
+		<link rel="icon" href="favicon.jpg" type="image/jpeg">
+		<link rel="shortcut icon" href="favicon.jpg" type="image/jpeg">
+
+		<link href="https://fonts.googleapis.com/css?family=Source+Serif+Pro&display=swap" rel="stylesheet"> 
 		<link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css" rel="stylesheet">
-		<link href="https://fonts.googleapis.com/css?family=Questrial" rel="stylesheet">
 		<link rel="stylesheet" href="//writ.cmcenroe.me/1.0.4/writ.min.css">
 		<link rel="stylesheet" href="/css/main.css">
 
