--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -5,10 +5,16 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<meta http-equiv="x-ua-compatible" content="ie=edge">
 
+		<meta name="author" content="Suyash">
 		<meta name="description" content="Suyash's Website">
 
 		<link rel="icon" href="favicon.jpg" type="image/jpeg">
 		<link rel="shortcut icon" href="favicon.jpg" type="image/jpeg">
+
+		<meta property="og:title" content="">
+		<meta property="og:url" content="https://suy.io">
+		<meta property="og:description" content="Suyash's Website">
+		<meta property="og:site_name" content="Suyash">
 
 		<link href="https://fonts.googleapis.com/css?family=Source+Serif+Pro&display=swap" rel="stylesheet"> 
 		<link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css" rel="stylesheet">
