--- a/src/main.scss
+++ b/src/main.scss
@@ -34,6 +34,15 @@ main {
     p {
       margin-top: 0;
       margin-bottom: 0.5rem;
+
+      a {
+        text-decoration: none;
+        font-weight: 600;
+
+        &:hover {
+          text-decoration: underline;
+        }
+      }
     }
   }
 
