Update link border

--- a/src/main.scss
+++ b/src/main.scss
@@ -38,9 +38,10 @@ main {
       a {
         text-decoration: none;
         font-weight: 600;
+        transition: border-bottom ease-in-out 100ms;
 
         &:hover {
-          text-decoration: underline;
+          border-bottom: 1px solid black;
         }
       }
     }
